src/test/deca/context/valid/objet/declare-field-override.deca
// Description:
//    Déclare un attribut qui override celui de la classe mere
//
// Resultats:
//
//
// Historique:
//    cree le 13/01/2023

class A{
    void get(){
        
    }
}
