src/test/deca/context/invalid/declare-method-override-field.deca
// Description:
//    Ecris une methode du nom d'un attribut de la classe mère
//
// Resultats:
//    Erreur Contextuelle
//    Ligne 16: The name "a" is already used for a field in the superclass (rule 2.7)
//
// Historique:
//    cree le 16/01/2023

class A {
    int a;
}

class B extends A {
    void a(){}
}